web-infras/parser/tests/fixtures/babel/es2015/let/let-at-binding-list-fail-5/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,5)
1|let let
 |   ^
